--- a/gradle.properties
+++ b/gradle.properties
@@ -11,3 +11,6 @@ android.nonTransitiveRClass=true
 #MPP
 kotlin.mpp.enableCInteropCommonization=true
 kotlin.mpp.androidSourceSetLayoutVersion1.nowarn=true
+
+#iOS
+xcodeproj=iosSample/iosSample.xcodeproj
