change package name

--- a/gradle.properties
+++ b/gradle.properties
@@ -10,7 +10,6 @@ android.nonTransitiveRClass=true
 
 #MPP
 kotlin.mpp.enableCInteropCommonization=true
-kotlin.mpp.androidSourceSetLayoutVersion1.nowarn=true
-
+kotlin.mpp.androidSourceSetLayoutVersion=2
 #iOS
 xcodeproj=iosSample/iosSample.xcodeproj
