--- a/sample/androidSample/src/main/AndroidManifest.xml
+++ b/sample/androidSample/src/main/AndroidManifest.xml
@@ -11,6 +11,7 @@
         <activity
             android:name=".ui.MainActivity"
             android:exported="true"
+            android:windowSoftInputMode="adjustResize"
             android:theme="@style/Theme.SesameKMMForm">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
