--- a/publish.gradle
+++ b/publish.gradle
@@ -9,7 +9,7 @@ apply plugin: 'signing'
 
 ext {
     PUBLISH_GROUP_ID = 'ru.mobileup'
-    PUBLISH_VERSION = '1.0.0-alpha1'
+    PUBLISH_VERSION = '1.0.0'
     DESCRIPTION = 'KMM library to control and validate forms.'
 
     GITHUB_USER = 'MobileUpLLC'
